--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link rel="icon" type="image/x-icon" href="https://example.com/favicon.ico">
 
 	<!-- Recommended favicon format -->
-	<link rel="icon" type="image/png" href="https://example.com/favicon.png">
+	<link rel="icon" type="image/png" href="./images/DCUG_logo.png">
 
 	<!-- Apple Touch Icon -->
 	<link rel="apple-touch-icon" href="/custom-icon.png">
