--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <html lang="en">
 
 <head>
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-68713352-2"></script>
-	<script src="js/googleAnalytics.js"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-68713352-2');
+	</script>
 
 	<!-- Set character encoding for the document -->
 	<meta charset="utf-8">
